Fixed small car seg issues, need to fix negative bbox error

--- a/~/kitti/model_fp/pipeline.config
+++ b/~/kitti/model_fp/pipeline.config
@@ -96,14 +96,14 @@ model: {
 
 
 train_input_reader: {
-  record_file_path: "/media/vicky/Office1/kitti/data/kitti_train.tfrecord"
+  #record_file_path: "/media/vicky/Office1/kitti/data/kitti_train.tfrecord"
   class_names: ["Car"]
   max_num_epochs : 160
   batch_size: 2
   prefetch_size : 25
   max_number_of_voxels: 12000
   shuffle_points: true
-  num_workers: 1
+  num_workers: 2
   groundtruth_localization_noise_std: [0.25, 0.25, 0.25]
   groundtruth_rotation_uniform_noise: [-0.15707963267, 0.15707963267]
   global_rotation_uniform_noise: [-0.78539816, 0.78539816]
@@ -172,7 +172,7 @@ train_config: {
 }
 
 eval_input_reader: {
-  record_file_path: "/media/vicky/Office1/kitti/data/kitti_val.tfrecord"
+  #record_file_path: "/media/vicky/Office1/kitti/data/kitti_val.tfrecord"
   class_names: ["Car"]
   batch_size: 2
   max_num_epochs : 160
@@ -182,6 +182,6 @@ eval_input_reader: {
   num_workers: 3
   anchor_area_threshold: 1
   remove_environment: false
-  kitti_info_path: "/media/vicky/Office1/kitti/data/kitti_infos_test.pkl"
+  kitti_info_path: "/media/vicky/Office1/kitti/data/kitti_infos_val.pkl"
   kitti_root_path: "/media/vicky/Office1/kitti/data"
 }
